# zed-issues

zed-issue-41290/: zed-unicode-multicursor-test.md
zed-issue-42994/: ISSUE-46348-REPRODUCTION.md  Makefile  README.md  test_program  test_program.cpp
zed-issue-42994/.zed/: keymap.json  tasks.json
zed-issue-42994/test_program.dSYM/Contents/Resources/DWARF/: test_program
zed-issue-42994/test_program.dSYM/Contents/Resources/Relocations/aarch64/: test_program.yml
zed-issue-46602/: README.md  test-combined-edge-case.txt  test.txt
zed-issue-46881/: example_test.go  go.mod  testify_test.go
zed-issue-48213-b/: Cargo.toml
zed-issue-48213-b/src/: cfg.rs  main.rs  store.rs
zed-issue-52163/: README.md  test_debugger.py
zed-issue-52163/.zed/: tasks.json
