[package]
name = "that-limit"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
serde = { version= "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
serde_json = "1.0.149"
redis = { version = "1.0.2", features = ["connection-manager", "tokio-comp"] }
serde_with = { version = "3.16.1", features = ["time_0_3"] }
simplelog = "0.12.2"
futures = "0.3"


[dev-dependencies]
testcontainers-modules = { version = "0.14.0", features = ["redis"] }
http-body-util = "0.1.3"
